--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ footer{
 
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
-nav:hover{
+nav ul li:hover{
   text-decoration: underline;
 }
 
@@ -147,8 +147,9 @@ main:focus{
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
-.container:first-child{
+.container div:first-child{
   grid-column: 1 / span 3;
+  grid-row: 1;
   background-image: url('/images/header.jpg');
 }
 
@@ -157,10 +158,62 @@ first div in the grid  and place it in the grid. */
  four rows in the grid. */
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
+.about{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+
+}
+.about-image{
+  grid-column: 1/span 3;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 2;
+}
+
+.method{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+}
+.method-image{
+  grid-column: 1/span 3;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 3;
+}
+
+.clients{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+}
+.clients-image{
+  grid-column: 1/span 3;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 4;
+}
+
+.contact{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 5;
+}
+.contact-image{
+  grid-column: 1/span 3;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 5;
+}
 
 
  /* Step 8: Write the selector/rule property to style the .text-block class. */
-
+.text-block{
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+}
 
 /* Add your media query here */
 
