--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ nav ul li:hover{
 .skip a{
   position: absolute;
   left: -10000px;
-  top: -40;
+  top: -40px;
   width: 1px;
   height: 1px;
   overflow: hidden;
@@ -128,7 +128,7 @@ nav ul li:hover{
   position: static;
   width: auto;
   height: auto;
-  top: 20;
+  top: 20px;
 }
 
 
